# fishing_game

./: .gitignore  CMakeLists.txt
examples/: erase-remove_idiom.cpp
src/: Constants.hpp  main.cpp
src/entity/: Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  Hook.cpp  Hook.hpp  MyRectangle.cpp  MyRectangle.hpp  Player.cpp  Player.hpp
src/examples/: Atributes.cpp
src/game/: EntityManager.cpp  EntityManager.hpp  Game.cpp  Game.hpp
src/utils/: BackgroundDraw.cpp  BackgroundDraw.hpp  Direction.hpp  Random.cpp  Random.hpp
